--- a/App/www/font.css
+++ b/App/www/font.css
@@ -1,36 +1,36 @@
 @font-face {
-    font-family: 'Unbounded-Bold';
+    font-family: Unbounded-Bold;
     src: url('Unbounded-Bold.woff2') format('woff2'), /* Modern Browsers */
          url('Unbounded-Bold.ttf') format('truetype'); /* Safari, Android, iOS */
 }
 
 @font-face {
-    font-family: 'Unbounded-Medium';
+    font-family: Unbounded-Medium;
     src: url('Unbounded-Medium.woff2') format('woff2'),
          url('Unbounded-Medium.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Unbounded-Light';
+    font-family: Unbounded-Light;
     src: url('Unbounded-Light.woff2') format('woff2'),
          url('Unbounded-Light.ttf') format('truetype');
 }
 
 
 h1 {
-  font-family: 'Unbounded-Bold';
+  font-family: Unbounded-Bold;
 }
 
 h2 {
-  font-family: 'Unbounded-Medium';
+  font-family: Unbounded-Medium;
 }
 
 h3 {
-  font-family: 'Unbounded-Light';
+  font-family: Unbounded-Light;
 }
 
 * {
-  font-family: 'Unbounded-Bold';
+  font-family: Unbounded-Bold;
   color: white;
 }
 
